repair backface-visibility for IOS

--- a/src/components/LearningCard/LearningCard.scss
+++ b/src/components/LearningCard/LearningCard.scss
@@ -6,6 +6,7 @@
     font-weight: 700;
     color: rgb(255, 255, 255);
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     padding: 40px;
     text-align: center;
     overflow-y: auto;
